added position relative to css file

--- a/pdf_with_js/stylesheets/printer.css
+++ b/pdf_with_js/stylesheets/printer.css
@@ -29,6 +29,7 @@ div.download-btn {
 
 @media print {
     .print-first-page {
+        position: relative;
         display: flex;
         flex-direction: column;
         height: 100vh;
